--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,23 @@
 astroid==3.0.2
-bcrypt==3.2.0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-contourpy==1.2.0
 coverage==7.4.1
-cryptography==3.4.8
-cupshelpers==1.0
-cycler==0.12.1
-dbus-python==1.2.18
-defer==1.0.6
 dill==0.3.8
-distlib==0.3.8
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-duplicity==0.8.21
 exceptiongroup==1.2.0
-Faker==23.3.0
-fasteners==0.14.1
-filelock==3.13.1
-fonttools==4.47.2
-future==0.18.2
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
+Faker==23.1.0
 iniconfig==2.0.0
+install==1.3.5
 isort==5.13.2
-jeepney==0.7.1
-keyring==23.5.0
-kiwisolver==1.4.5
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.0.1
-matplotlib==3.8.2
 mccabe==0.7.0
-monotonic==1.6
-more-itertools==8.10.0
-netifaces==0.11.0
-numpy==1.26.3
-oauthlib==3.2.0
-olefile==0.46
 packaging==23.2
-paramiko==2.9.3
-pexpect==4.8.0
-Pillow==9.0.1
 platformdirs==4.1.0
 pluggy==1.4.0
-protobuf==3.12.4
-ptyprocess==0.7.0
-pycairo==1.20.1
-pycups==2.0.1
-PyGObject==3.42.1
-PyJWT==2.3.0
 pylint==3.0.3
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pytest==7.4.4
+pylint-pytest==1.1.7
+pytest==8.0.0
 pytest-cov==4.1.0
 pytest-pylint==0.21.0
-python-apt==2.4.0+ubuntu2
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.1
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
-requests==2.25.1
-SecretStorage==3.3.1
 six==1.16.0
-systemd-python==234
 tomli==2.0.1
 tomlkit==0.12.3
 typing_extensions==4.9.0
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-virtualenv==20.25.0
-wadllib==1.3.6
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
