--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,23 @@ iniconfig==2.0.0
 install==1.3.5
 isort==5.13.2
 mccabe==0.7.0
+numpy==1.26.4
 packaging==23.2
+pandas==2.2.1
 platformdirs==4.1.0
 pluggy==1.4.0
 pylint==3.0.3
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
 pylint-pytest==1.1.7
 pytest==8.0.0
 pytest-cov==4.1.0
 pytest-pylint==0.21.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
+pytz==2024.1
 six==1.16.0
 tomli==2.0.1
 tomlkit==0.12.3
 typing_extensions==4.9.0
+tzdata==2024.1
